--- a/app/src/main/res/layout/cpp_programming.xml
+++ b/app/src/main/res/layout/cpp_programming.xml
@@ -26,12 +26,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="11dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:padding="10dp"
+            android:background="@drawable/layoutback"
             android:orientation="vertical">
 
             <TextView
@@ -71,45 +74,85 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="STRING"
                 android:id="@+id/cpp_b1"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="VECTOR"
                 android:id="@+id/cpp_b2"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="LIST"
                 android:id="@+id/cpp_b3"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="SETS"
                 android:id="@+id/cpp_b4"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="MAPS"
                 android:id="@+id/cpp_b5"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="STACKS AND QUEUE"
                 android:id="@+id/cpp_b6"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="ALGORITHMS"
                 android:id="@+id/cpp_b7"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
             
         </LinearLayout>
 
