--- a/app/src/main/res/layout/programming_languages.xml
+++ b/app/src/main/res/layout/programming_languages.xml
@@ -26,11 +26,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="11dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
+            android:background="@drawable/layoutback"
             android:orientation="vertical">
 
             <TextView
@@ -70,7 +73,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:background="#E0FFFF"
                 android:gravity="center">
 
                  <Button
@@ -78,27 +80,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                     android:background="@drawable/buttonbag"
                     android:text="C PROGRAMMING"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
 
                 <Button
                     android:id="@+id/ProgrammingLanguageCustomButton2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:background="@drawable/buttonbag"
                     android:text="C++ PROGRAMMING"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
 
                 <Button
                     android:id="@+id/ProgrammingLanguageCustomButton3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:background="@drawable/buttonbag"
                     android:text="JAVA PROGRAMMING"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
 
                 <Button
                     android:id="@+id/ProgrammingLanguageCustomButton4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:background="@drawable/buttonbag"
                     android:text="PYTHON PROGRAMMING"/>
 
             </LinearLayout>
