--- a/app/src/main/res/layout/activity_roadmap.xml
+++ b/app/src/main/res/layout/activity_roadmap.xml
@@ -20,10 +20,6 @@
             android:src="@drawable/logo" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:padding="11dp"
@@ -32,6 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
             android:background="@drawable/layoutback"
             android:orientation="vertical">
 
@@ -67,13 +64,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
 
-
-            <Button
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-                android:background="@drawable/buttonbag"
+        android:background="@drawable/buttonbag"
         android:id="@+id/btn1"
-        android:text="WEB DEVELOPER"/>
+        android:text="APP DEVELOPER"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
@@ -82,24 +79,17 @@
         android:layout_height="wrap_content"
         android:background="@drawable/buttonbag"
         android:id="@+id/btn2"
-        android:text="APP DEVELOPER"/>
+        android:text="DATA SCIENTIST"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/buttonbag"
         android:id="@+id/btn3"
-        android:text="DATA SCIENTIST"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="15dp"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buttonbag"
-        android:id="@+id/btn4"
         android:text="AI/ML"/>
 
 
