--- a/app/src/main/res/layout/operating_system.xml
+++ b/app/src/main/res/layout/operating_system.xml
@@ -26,12 +26,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:padding="11dp"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-android:padding="11dp"
+            android:padding="10dp"
+            android:background="@drawable/layoutback"
             android:orientation="vertical">
 
             <TextView
@@ -65,13 +67,6 @@ android:padding="11dp"
             <View
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-               android:background="@drawable/layoutback"
-                android:gravity="center">
 
                 <Button
                     android:id="@+id/OS_btn1"
@@ -143,10 +138,9 @@ android:padding="11dp"
                     android:background="@drawable/buttonbag"
                     android:text="MEMORY MANAGEMENT"/>
 
-
-
-            </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
 
         </LinearLayout>
 
