--- a/app/src/main/res/layout/web_development.xml
+++ b/app/src/main/res/layout/web_development.xml
@@ -22,7 +22,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="25dp" />
+        android:layout_height="15dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -75,6 +75,9 @@
                 android:background="@drawable/buttonbag"
                 android:layout_centerInParent="true"
                 android:text="HTML and CSS"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
 
             <View
                 android:layout_width="match_parent"
@@ -86,7 +89,11 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/buttonbag"
                 android:layout_centerInParent="true"
+                android:background="@drawable/buttonbag"
                 android:text="JAVASCRIPT"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
 
             <View
                 android:layout_width="match_parent"
@@ -98,6 +105,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/buttonbag"
                 android:layout_centerInParent="true"
+                android:background="@drawable/buttonbag"
                 android:text="BOOTSTRAP and JQUERY"/>
 
             <View
@@ -132,6 +140,7 @@
                 android:id="@+id/WebDevelopmentCustomButton6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbag"
                 android:layout_centerInParent="true"
                 android:background="@drawable/buttonbag"
                 android:text="MONGODB"/>
